--- a/Angular/a-web/src/app/app.component.html
+++ b/Angular/a-web/src/app/app.component.html
@@ -1,3 +1,14 @@
-<h1>
-  {{title}}
-</h1>
+<h1>Mi primer aplicacion en Angular</h1>
+
+SI HACER ESTO
+<p>Gracias por visitarnos {{usuario.nobre}} {{usuario.apellido}}</p>
+
+NO HACER ESTO
+<h3>Desarrollado por {{
+  saludar(usuario.nombre,usuario.apellido)}}
+
+</h3>
+
+NO HACER ESTO
+<h3>{{usuario.nombre +" " + usuario.apellido}}
+</h3>
