--- a/Angular/a-web/src/app/estilo/estilo.component.html
+++ b/Angular/a-web/src/app/estilo/estilo.component.html
@@ -1,3 +1,23 @@
-<p>
-  estilo works!
-</p>
+
+<style>
+  p{
+    border: 5px;
+    border-style:solid;
+    border-color: blue;
+
+  }
+  h1{
+    color: white;
+    background-color: red;
+  }
+  #verde{
+    border-color: darkseagreen;
+  }
+  .rojo{
+    color: red;
+  }
+</style>
+<p class="rojo"> </p>
+<P> estilo works</P>
+<p id="verde">hola</p>
+<h1>ssss</h1>
