--- a/Angular/a-web/src/app/Components/inicio/inicio.component.html
+++ b/Angular/a-web/src/app/Components/inicio/inicio.component.html
@@ -1,8 +1,36 @@
 <div class="container">
 
+  <h1>Bienvenidos</h1>
 
+  <h2>Usuarios Conectados</h2>
 
   <div class="row">
+
+    <div *ngFor="let usuario of arreglousuarios">
+      <div class="col-sm-4" *ngIf="usuario.conectado">
+        <div class="card" style="width: 20rem;">
+          <div class="card-block">
+            <h4  class="card-title">{{usuario.nombre}} - {{usuario.conectado}}</h4>
+            <p class="card-text">{{usuario.nombre}} + {{usuario.apellido}}</p>
+            <a href="#" class="btn btn-primary btn-block">Ir a Perfil</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <h2>Planetas de Star Wars</h2>
+  <br>
+
+  <button class="btn btn-outline-success" (click)="cargarPlanetas()">Cargar Planetas</button>
+
+  <div>
+    <ul *ngFor="let planeta of planetas">
+      <li>{{planeta.name}}</li>
+    </ul>
+  </div>
+  <!--<div class="row">
 
     <div class="col-md-6">
       <div class="row">
@@ -78,7 +106,7 @@
     <div class="col-sm-6"></div>
   </div>
 
-
+-->
 
 </div>
 
