--- a/Angular/a-web/src/app/Components/inicio/inicio.component.html
+++ b/Angular/a-web/src/app/Components/inicio/inicio.component.html
@@ -1,8 +1,23 @@
 <div class="container">
 
   <h1>Bienvenidos</h1>
-
-  <h2>Usuarios Conectados</h2>
+  <h2>Usuarios</h2>
+<div class="row">
+  <div class="col-sm-6">
+    <div class="form-group">
+      <pre>
+        {{nuevoUsuario | json}}
+      </pre>
+      <label class="col-form-label">Nombre Usuario:</label>
+      <input class="form-control"
+      placeholder="Ingrese nombre"
+      [(ngModel)]="nuevoUsuario.nombre" type="text">
+    </div>
+    <button class="btn btn-success"
+    (click)="crearUsuario()"> Crear Usuario</button>
+  </div>
+</div>
+<!-- <h2>Usuarios Conectados</h2>
 
   <div class="row">
 
@@ -22,13 +37,21 @@
 
   <h2>Planetas de Star Wars</h2>
   <br>
-
+-->
+  <h2>Planetas</h2>
   <button class="btn btn-outline-success" (click)="cargarPlanetas()">Cargar Planetas</button>
-
+  <div class="row">
+  <div class="col-sm-4" *ngFor="let planeta of planetas; let i=index;">
+    <app-planeta-star-wars [planeta]="planeta">
+    </app-planeta-star-wars>
+  </div>
+  </div>
+<!--
   <div class="row">
     <div *ngFor="let planeta of planetas">
       <div class="col-sm-4">
-        <div class="card" style="width:25rem;">
+        <div class="card" style="width:25rem">
+          <img class="card-img-top" [src]="planeta.imagenURL" alt="Card image cap" width="100px">
           <div class="card-block">
             <h4  class="card-title">{{planeta.name}} </h4>
             <p class="card-text">
@@ -40,6 +63,8 @@
               <br><b>Terreno: </b>{{planeta.terrain}}
               <br><b>Superficie de Agua: </b>{{planeta.surface_water}}
               <br><b>Poblacion: </b>{{planeta.population}}
+              <br> <li *ngFor="let residents of planeta.residents">{{residents}}</li>
+
             </p>
 
           </div>
@@ -47,6 +72,7 @@
       </div>
     </div>
   </div>
+-->
   <!--<div class="row">
 
     <div class="col-md-6">
