--- a/Angular/a-web/src/app/Components/clima/clima.component.html
+++ b/Angular/a-web/src/app/Components/clima/clima.component.html
@@ -1,6 +1,4 @@
-<div>
-  <h1>{{planeta.name}}</h1>
-  <p>Clima:
-    <strong>{{planeta.climate}}</strong>
-  </p>
-</div>
+<p>
+  Clima:
+  <strong>{{clima}}</strong>
+</p>
