--- a/Angular/a-web/src/app/app.component.html
+++ b/Angular/a-web/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!--
 <h1>Mi primer aplicacion en Angular</h1>
 
 
@@ -53,7 +54,23 @@ NO HACER ESTO
 <h3>{{usuario.nombre +" " + usuario.apellido}}
 </h3>
 
-<!-- no usar : <a href="{{url}}"> -->
+ no usar : <a href="{{url}}">
 <a [href]="url">
   <img [src]="src" alt="Logo Angular">
 </a>
+-->
+<h2>hola</h2>
+<h3>Header</h3>
+
+<ul>
+  <li>
+    <a [routerLink]="['inicio']">Inicio</a>
+  </li>
+  <li>
+    <a [routerLink]="['pagina2',66,'pagina3',1283]">Pagina2</a>
+  </li>
+</ul>
+
+<router-outlet></router-outlet>
+
+<h3>Footer</h3>
